--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,7 +21,7 @@
         "midfielder": "Midfielder",
         "forward": "Forward",
         "coach": "Coach",
-        "games": "Appearences",
+        "games": "Appearances",
         "clean-sheets": "Clean sheets",
         "saves": "Saves",
         "goals": "Goals",
